--- a/openhpi/trunk/rt-env.sh.in
+++ b/openhpi/trunk/rt-env.sh.in
@@ -4,7 +4,7 @@
 OPENHPI_DEBUG=YES
 #OPENHPI_DEBUG_TRACE=YES
 OPENHPI_UID_MAP=@abs_top_srcdir@/uid_map
-OPENHPI_CONF=@abs_top_srcdir@/examples/openhpi.conf
+OPENHPI_CONF=@abs_top_srcdir@/openhpi.conf
 LD_LIBRARY_PATH_DAEMON=@abs_top_builddir@/openhpid2/.libs:@abs_top_builddir@/marshal/.libs:@abs_top_builddir@/utils/.libs:${LD_LIBRARY_PATH}
 LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:@abs_top_builddir@/src/.libs:@abs_top_builddir@/utils/.libs:@abs_top_builddir@/marshal/.libs
 LIBRARY_PATH=${LIBRARY_PATH}:@abs_top_builddir@/src/.libs:@abs_top_builddir@/utils/.libs
