--- a/openhpi/trunk/openhpi.conf.example
+++ b/openhpi/trunk/openhpi.conf.example
@@ -127,12 +127,16 @@ handler libdummy {
 #        passphrase = "opensesame" # Version 3. Required if security_level is authNoPriv or authPriv.
 #        auth_type = "MD5" # Version 3. Passphrase encoding (MD5|SHA)
 #        security_level = "noAuthNoPriv" # Version 3. (noAuthNoPriv|authNoPriv|authPriv)
-#        context_name  = "context_name" # Version 3 only.  Optional for snmp agent that requires context_name 
-#        count_per_getbulk = "xx"   # Version 3 Optional. With Version 3, we use SNMP_MSG_GETBULK for performance.
-#				    # This variable sets the MAX OIDs per MSG_GETBULK.
-#                                   # Lower limit is set by OpenHPI/snmp_bc at 10.
-#				    # Upper limit is set by target snmp agent. Depends on BladeCenter 
-#				    # Management Module code load, this upper limit is either 32 or 96.
+#        context_name  = "context_name"  # Version 3 only.  Optional for snmp agent that requires context_name 
+#        count_per_getbulk = "xx"        # Version 3 Optional. With Version 3, we use SNMP_MSG_GETBULK for performance.
+#				         # This variable sets the MAX OIDs per MSG_GETBULK.
+#                                        # Lower limit is set by OpenHPI/snmp_bc at 10.
+#				         # Upper limit is set by target snmp agent. Depends on BladeCenter 
+#				         # Management Module code load, this upper limit is either 32 or 96.
+#	privacy_passwd   = "privacy_key" # Version 3 - Required if security_level is authPriv
+#	privacy_protocol = "DES"         # Version 3 - Optional if security_level is authPriv. 
+#                                        #  If security_level is authPriv, code defaults privacy_protocol to DES
+#                                        #  because there is no other privacy protocol choice.
 #}
 
 ## Section for static dummy plugin:
