#1503025 comment: Add SaHpiBladeCenter.h

--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -85,6 +85,7 @@ includedir=$(base_includedir)/openhpi
 # These are the only headers that users should have any access to
 include_HEADERS = $(top_srcdir)/include/SaHpi.h \
                   $(top_srcdir)/include/SaHpiAtca.h \
+		  $(top_srcdir)/include/SaHpiBladeCenter.h \
                   $(top_srcdir)/include/oHpi.h \
                   $(top_srcdir)/utils/oh_utils.h \
                   $(top_srcdir)/utils/announcement_utils.h \
