--- a/openhpi/branches/2.5.x/src/t/ohpic/Makefile.am
+++ b/openhpi/branches/2.5.x/src/t/ohpic/Makefile.am
@@ -22,10 +22,10 @@ AM_CFLAGS		= @NOCFLAGS@
 TDEPLIB                 = $(top_builddir)/src/libopenhpi.la \
 			  $(top_builddir)/utils/libopenhpiutils.la
 
-CDEPLIB                 = $(top_builddir)/openhpid2/libopenhpi.la \
+CDEPLIB                 = $(top_builddir)/openhpid/libopenhpi.la \
 			  $(top_builddir)/utils/libopenhpiutils.la
 
-TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(top_builddir)/openhpid2/.libs:$(top_builddir)/utils/.libs:$(top_builddir)/marshal/.libs
+TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(top_builddir)/openhpid/.libs:$(top_builddir)/utils/.libs:$(top_builddir)/marshal/.libs
 TESTS_ENVIRONMENT += OPENHPI_PATH=$(top_builddir)/plugins/dummy:$(top_builddir)/plugins/ipmi:$(top_builddir)/plugins/ipmidirect:$(top_builddir)/plugins/watchdog:$(top_builddir)/plugins/sysfs:$(top_builddir)/plugins/text_remote:$(top_builddir)/plugins/snmp_bc:$(top_builddir)/plugins/snmp_rsa
 TESTS_ENVIRONMENT += OPENHPI_UID_MAP=$(shell pwd)/uid_map
 
