#1502896 Fixing installatin dir for cpp wrapper header files

--- a/openhpi/branches/2.5.x/cpp/Makefile.am
+++ b/openhpi/branches/2.5.x/cpp/Makefile.am
@@ -22,6 +22,7 @@ INCLUDES		= @OPENHPI_INCLUDES@
 
 AM_CFLAGS		= -g @CFLAGS@
 
+includedir=$(base_includedir)/openhpi
 include_HEADERS		= oSaHpiAlarm.hpp \
                   	  oSaHpiAnnouncement.hpp \
                   	  oSaHpiAnnunciatorRec.hpp \
