--- a/openhpi/trunk/plugins/snmp_bc/Makefile.am
+++ b/openhpi/trunk/plugins/snmp_bc/Makefile.am
@@ -30,6 +30,7 @@ AM_CFLAGS = @CFLAGS@ @SNMPFLAGS@
 pkglib_LTLIBRARIES = libsnmp_bc.la
 
 EXTRA_DIST = \
+		bc2hpi.pdf \
 		eventmap2code.pl \
 		snmp_bc_event.map \
 		snmp_bc.h \
